# Craft

./: .gitmodules  CMakeLists.txt  README.md  server.py
.github/workflows/: build.yml  clang-tidy.yml  style.yml  test.yml
src/: client.c  config.h  cube.c  db.c  db.h  item.c  item.h  main.c  map.c  map.h  matrix.c  sign.c  util.c  util.h
tests/: assert.c  assert.h  test_matrix.c
